# poly-ui

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  components.json  index.html  mobile.html  package-lock.json  package.json  spike-notes.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/actions/release-notes/: action.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: image-upload.md  release-crash-debugging.md
docs/guides/: creating-views.md
docs/superpowers/plans/: 2026-06-26-provider-connection-routing.md  2026-06-28-sidebar-animation-overhaul.md  2026-07-05-settings-experience-redesign.md  2026-07-10-supertonic-release-runtime.md  2026-07-23-remove-poly-agent.md
docs/superpowers/specs/: 2026-05-30-reliable-chat-title-generation-design.md  2026-06-16-poly-ui-memory-design.md  2026-06-26-provider-connection-routing-design.md  2026-06-28-sidebar-animation-overhaul-design.md  2026-07-05-settings-experience-redesign-design.md  2026-07-10-supertonic-release-runtime-design.md  2026-07-11-auto-update-relaunch-design.md  2026-07-13-responsive-viewport-drawer-design.md
scripts/: build-with-ollama.mjs  generate-release-notes.mjs  install.ps1  install.sh  sync-agent-types.mjs  windows-relaunch-smoke.ps1
scripts/macos/: build-ollama-pkg.sh  postinstall
src/: App.css  App.tsx  main.tsx  mobile.tsx  startup.ts  theme.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  hide-bundled-sqlite.map  tauri.conf.json  tauri.linux.conf.json  tauri.ollama.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/moonshine-sys/: Cargo.toml  build.rs
src-tauri/moonshine-sys/src/: lib.rs
src-tauri/src/: agent_viewport.rs  agent_viewport_collector.js  auth.rs  cef_osr.rs  error.rs  gtk_overlay.rs  lib.rs  main.rs  mobile_pairing.rs  startup_log.rs  stream_emitter.rs  title_generator.rs  tool_loop.rs  updater.rs  web_search.rs  whisper_state.rs  window_state_recovery.rs
src-tauri/src/commands/: chat_commands.rs  config_commands.rs  db_commands.rs  dictation.rs  dictation_commands.rs  memory_commands.rs  mod.rs  model_commands.rs  provider_commands.rs  system_commands.rs  tool_commands.rs  user_commands.rs
src-tauri/src/db/: connection.rs
src-tauri/src/db/migrations/: 20260501000000_create_users.sql  20260501001000_recreate_sessions_integer_user_id.sql  20260509000000_create_provider_configs.sql  20260510000000_remove_ollama_api.sql  20260528000000_add_websearch_to_messages.sql  20260531000000_add_openai_compatible_provider.sql  20260616000000_create_memory_tables.sql
src-tauri/src/embedded_webview/: child_host.rs  gtk_host.rs  host.rs  mod.rs
src-tauri/src/memory/: canonical.rs  context.rs  error.rs  extractor.rs  filter.rs  mod.rs  processing.rs  repository.rs  retriever.rs  service.rs  sync.rs  types.rs
src-tauri/src/models/: chat.rs
src-tauri/src/providers/: anthropic.rs  base.rs  factory.rs  gemini.rs  mod.rs  ollama.rs  openai_compatible.rs  profile.rs  selector.rs
src-tauri/src/repository/: user_repository.rs
src-tauri/src/services/: user_service.rs
src-tauri/src/tools/: builtin.rs  mod.rs
src-tauri/src/web_search/: content_results.rs  exa.rs  mod.rs  ollama.rs  tavily.rs
src-tauri/src/web_search/local/: mod.rs  normalize.rs  passages.rs  ranking.rs  reader.rs  search.rs  security.rs  types.rs
src-tauri/src/web_search/local/providers/: brave.rs  duckduckgo.rs  mod.rs  mojeek.rs
src-tauri/windows/: hooks.nsh
src/components/: ErrorBoundary.tsx  StartupLoadingScreen.tsx  UpdateChip.tsx  WindowControls.tsx  WindowResizeBorders.tsx  app-sidebar.tsx  nav-main.tsx  nav-user.tsx
src/components/Auth/: AuthModal.tsx
src/components/Chat/: ArchivedChatsDialog.tsx  ChatArea.tsx  ChatInput.tsx  ChatWorkspace.tsx  ConversationItem.tsx  ConversationSearchModal.tsx  DeleteConversationDialog.tsx  EmptyState.tsx  Header.tsx  Message.tsx  ModelSelector.tsx  ModelSelectorOption.tsx  ThinkingIndicator.tsx  WebSearchDisclosure.tsx  conversation-search.test.ts  conversation-search.ts
src/components/Dictation/: DictationModelDialog.tsx
src/hooks/: dictationLifecycle.ts  dictationSession.ts  index.ts  useAutoResizeTextarea.ts  useAutoSelectModel.ts  useChatActionHandlers.ts  useChatAttachments.ts  useChatStream.ts  useChatTextarea.ts  useCommandPaletteItems.tsx  useDictation.ts  useFileDragDetection.ts  useKeyboardShortcuts.ts  useModelPicker.ts  useNotify.ts  usePresence.ts  useResizePerformance.ts  useSlashCommand.ts  useSystemPrompts.ts
src/lib/: color.ts  db.ts  featureRegistry.ts  markdownCode.test.ts  performance.ts  platform.ts  pretext.ts  streamMarkdown.test.ts  text-measure.ts  useDictation.ts  userApi.ts  utils.ts  view-registry.ts
src/store/: authStore.ts  chatStore.ts  confirmStore.ts  coordinator.ts  devStore.ts  folderStore.ts  modelStore.ts  notificationStore.ts  persistStorage.ts  settingsStore.ts  toolStore.ts  ttsStore.ts  updateStore.ts
src/types/: chat.ts
tests/: agentActivity.test.ts  agentActivitySteps.test.ts  agentContext.test.ts  agentContextIntent.test.ts  agentOutputState.test.ts  agentPolyWorkflow.test.ts  agentProviderConfig.test.ts  agentReviewDiff.test.ts  agentReviewPanel.test.ts  agentRunCore.test.ts  agentSecurity.test.ts  agentTeraxWorkflow.test.ts  agentViewportDrawer.test.ts  avatar.test.ts  browserNavigation.test.ts  cefFrame.test.ts  cefInput.test.ts  cefPackaging.test.ts  chatQueue.test.ts  chatScreenRegression.test.ts  chatStreamFixes.test.ts  commandPaletteIntentParser.test.ts  conversationMetadata.test.ts  devComponentGallery.test.ts  dictationAudioSamples.test.ts  dictationLifecycle.test.ts  dictationSession.test.ts  embeddedWebviewStore.test.ts  fileDragDetection.test.ts  imageUpload.test.ts  markdownRenderBlocks.test.ts  memoryBeta.test.ts  modelChoice.test.ts  modelSelector.test.ts  noMixedDynamicImports.test.ts  noMuiMigration.test.ts  performancePrimitives.test.ts  persistStorage.test.ts  polishPassRegression.test.ts  releaseNotes.test.ts  (+14 more)
(+327 files in other folders)
