[package]
name = "polyui"
version = "0.13.10"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "polyui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
dev-sql-console = []
whisper-cuda = ["whisper-rs/cuda"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
ollama-rs = { version = "0.3.4", features = ["stream", "macros"] }
tokio = "1.50.0"
tokio-stream = "0.1.18"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3.32"
log = "0.4"
sha2 = "0.10"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
windows-sys = { version = "0.59", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }
raw-window-handle = "0.6"
dirs = "6"
poly-agent-tauri = { git = "https://github.com/monolabsdev/poly-agent.git", features = ["tauri"] }
whisper-rs = "0.16"
cpal = "0.15"
hound = "3.5"
