[package]
name = "polyui"
version = "0.20.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "polyui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
st-tts = "0.3"

[features]
default = []
dev-sql-console = []
whisper-cuda = ["whisper-rs/cuda"]

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
ollama-rs = { version = "0.3.4", features = ["stream", "macros"] }
tokio = "1.50.0"
tokio-stream = "0.1.18"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "gzip", "brotli", "deflate", "http2"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3.32"
log = "0.4"
sha2 = "0.10"
url = "2"
percent-encoding = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-supertonic = "0.3"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
windows-sys = { version = "0.59", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }
raw-window-handle = "0.6"
dirs = "6"
whisper-rs = "0.16"
cpal = "0.15"
hound = "3.5"

# Agent viewport on Linux: built directly with wry inside a GtkFixed because
# Tauri's add_child cannot position child webviews on GTK. Versions must stay
# in lockstep with the ones tauri-runtime-wry uses.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
wry = { version = "0.55", default-features = false, features = ["protocol", "os-webview", "linux-body"] }
